--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Sitio WEB Introducción a los Sistemas de Computación Sección "B"</title>
 
-<link rel="stylesheet" href="css/style.css">
+  <!--ESTILOS-->
+<link rel="stylesheet" href="css/Style.css">
   <link rel="icon" href="img/1.ico">
 
     <!--ICONOS-->
@@ -16,7 +17,7 @@
         <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
     <!--ESTILOS-->
-        <link rel="stylesheet" href="/css/Style.css">
+        <link rel="stylesheet" href="css/Style.css">
 
     <!--FUENTES-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
